# note_app_fullstack_django_react

./: .gitignore  pyproject.toml
backend/: db.sqlite3
backend/api/: serializers.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py
frontend/src/: App.jsx  api.js  constants.js
frontend/src/components/: Form.jsx  LoadingIndicator.jsx  Note.jsx  ProtectedRoute.jsx
frontend/src/pages/: Home.jsx  NotFound.jsx
frontend/src/styles/: Home.css
