[tool.poetry]
name = "note-app-fullstack-django-react"
version = "0.1.0"
description = ""
authors = ["Johnny Nylund <91679773+jaygoode@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
